<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:name="org.sagebionetworks.research.mobiletoolbox.app.ui.today.TodayFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="64dp"
    android:background="@color/backgroundGrey"
    app:layoutManager="LinearLayoutManager"
    tools:context=".ui.today.TodayFragment"
    tools:listitem="@layout/assessment_card" />