...
                android:layout_height="wrap_content"
                android:layout_marginTop="128dp"
                android:text="@string/welcome_screen_disclaimer"/>

        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/continue_string"/>
    </LinearLayout>
</ScrollView>
