...
            app:layout_constraintTop_toBottomOf="@+id/message"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/studyIdInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword"
                android:hint="@string/study_id_hint" />
        </com.google.android.material.textfield.TextInputLayout>

...
